# python-project-83

./: .env  .env.sample  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my_workflow.yml
page_analyzer/: app.py  db.py  parser.py  urls.py
page_analyzer/templates/: 404.html  flash_messages.html  footer.html  head.html  index.html  url.html  urls.html
