[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This application analyzes specified pages for SEO suitability, si"
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"
packages = [
    {include = "page_analyzer"}
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
gunicorn = "^21.2.0"
flake8 = "^6.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
